--- a/Cartel/Cartel.csproj
+++ b/Cartel/Cartel.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Feeds\Feed.cs" />
     <Compile Include="Feeds\PeriodicallyPolledFeed.cs" />
     <Compile Include="Feeds\PeriodicRssAtom.cs" />
+    <Compile Include="Extensions\IObservableExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
